// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Settings > Account menu item > Delete account menu item > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Account menu item > Delete account menu item > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Account menu item > Delete account menu item > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Account menu item > Delete account menu item > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Account menu item > Delete account menu item > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Account menu item > Delete account menu item > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Account menu item > Delete account menu item > allCalls 1`] = `
[
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": {
        "kind": "warning",
        "message": "Are you sure?",
        "title": "Delete account",
      },
      "name": "plugin:dialog|ask",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "get_access_token",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": undefined,
        "headers": {
          "Authorization": "Bearer test-token",
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
          "X-Username": "d",
        },
        "method": "DELETE",
      },
      "name": "/account/delete",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "delete_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": false,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`Settings > Account menu item > Delete account menu item > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Account menu item > Delete account menu item > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {},
}
`;

exports[`Settings > Account menu item > Delete account menu item > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Account menu item > Delete account menu item > openedPopup 1`] = `undefined`;

exports[`Settings > Account menu item > Delete account menu item > selectedTheme 1`] = `"System"`;

exports[`Settings > Account menu item > Delete account menu item > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Account menu item > Delete account menu item > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Account menu item > Opens and closes change password popup > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Account menu item > Opens and closes change password popup > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Account menu item > Opens and closes change password popup > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Account menu item > Opens and closes change password popup > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Account menu item > Opens and closes change password popup > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Account menu item > Opens and closes change password popup > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Account menu item > Opens and closes change password popup > allCalls 1`] = `[]`;

exports[`Settings > Account menu item > Opens and closes change password popup > document.body.outerHTML 1`] = `"<body class="theme--system"><div id="app"><div data-v-app=""></div></div></body>"`;

exports[`Settings > Account menu item > Opens and closes change password popup > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Account menu item > Opens and closes change password popup > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Account menu item > Opens and closes change password popup > openedPopup 1`] = `undefined`;

exports[`Settings > Account menu item > Opens and closes change password popup > selectedTheme 1`] = `"System"`;

exports[`Settings > Account menu item > Opens and closes change password popup > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": true,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Account menu item > Opens and closes change password popup > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Exports all notes > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Exports all notes > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Exports all notes > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Exports all notes > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Exports all notes > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Exports all notes > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Exports all notes > allCalls 1`] = `
[
  [
    "tauriApi",
    {
      "calledWith": {
        "directory": true,
        "multiple": false,
        "recursive": false,
        "title": "Choose a location",
      },
      "name": "plugin:dialog|open",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [],
        "saveDir": "C:\\path",
      },
      "name": "export_notes",
    },
  ],
]
`;

exports[`Settings > Exports all notes > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Exports all notes > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Exports all notes > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Exports all notes > openedPopup 1`] = `undefined`;

exports[`Settings > Exports all notes > selectedTheme 1`] = `"System"`;

exports[`Settings > Exports all notes > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Exports all notes > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Mounts > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Mounts > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Mounts > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Mounts > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Mounts > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Mounts > allCalls 1`] = `[]`;

exports[`Settings > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Mounts > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Mounts > openedPopup 1`] = `undefined`;

exports[`Settings > Mounts > selectedTheme 1`] = `"System"`;

exports[`Settings > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Opens and closes drop menu > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Opens and closes drop menu > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Opens and closes drop menu > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Opens and closes drop menu > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Opens and closes drop menu > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Opens and closes drop menu > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Opens and closes drop menu > allCalls 1`] = `[]`;

exports[`Settings > Opens and closes drop menu > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Opens and closes drop menu > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Opens and closes drop menu > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Opens and closes drop menu > openedPopup 1`] = `undefined`;

exports[`Settings > Opens and closes drop menu > selectedTheme 1`] = `"System"`;

exports[`Settings > Opens and closes drop menu > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Opens and closes drop menu > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Opens info popup > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Opens info popup > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Opens info popup > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Opens info popup > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Opens info popup > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Opens info popup > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Opens info popup > allCalls 1`] = `
[
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:app|version",
    },
  ],
]
`;

exports[`Settings > Opens info popup > document.body.outerHTML 1`] = `"<body class="theme--system"><div id="app"><div data-v-app=""></div></div></body>"`;

exports[`Settings > Opens info popup > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Opens info popup > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Opens info popup > openedPopup 1`] = `undefined`;

exports[`Settings > Opens info popup > selectedTheme 1`] = `"System"`;

exports[`Settings > Opens info popup > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Opens info popup > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Sets theme preference > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Sets theme preference > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Sets theme preference > Storage.get('THEME') 1`] = `"System"`;

exports[`Settings > Sets theme preference > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Sets theme preference > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Sets theme preference > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Sets theme preference > allCalls 1`] = `[]`;

exports[`Settings > Sets theme preference > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Sets theme preference > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Sets theme preference > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Sets theme preference > openedPopup 1`] = `undefined`;

exports[`Settings > Sets theme preference > selectedTheme 1`] = `"System"`;

exports[`Settings > Sets theme preference > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Sets theme preference > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Sets update strategy > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Sets update strategy > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Sets update strategy > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Sets update strategy > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Sets update strategy > Storage.get('UPDATE_STRATEGY') 1`] = `"manual"`;

exports[`Settings > Sets update strategy > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Sets update strategy > allCalls 1`] = `[]`;

exports[`Settings > Sets update strategy > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Sets update strategy > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Sets update strategy > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Sets update strategy > openedPopup 1`] = `undefined`;

exports[`Settings > Sets update strategy > selectedTheme 1`] = `"System"`;

exports[`Settings > Sets update strategy > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Sets update strategy > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Settings > Update and restart menu item > KeyStore.getKey() 1`] = `undefined`;

exports[`Settings > Update and restart menu item > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Settings > Update and restart menu item > Storage.get('THEME') 1`] = `null`;

exports[`Settings > Update and restart menu item > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Settings > Update and restart menu item > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Settings > Update and restart menu item > Storage.get('USERNAME') 1`] = `null`;

exports[`Settings > Update and restart menu item > allCalls 1`] = `
[
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:updater|check",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": {
        "kind": undefined,
        "message": "A new version of NoteBoi is available.
Do you want to update now?",
        "title": "Update available: v1.0.0",
      },
      "name": "plugin:dialog|ask",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:updater|download_and_install",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:process|restart",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:updater|check",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:updater|download_and_install",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:process|restart",
    },
  ],
]
`;

exports[`Settings > Update and restart menu item > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Settings > Update and restart menu item > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`Settings > Update and restart menu item > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`Settings > Update and restart menu item > openedPopup 1`] = `undefined`;

exports[`Settings > Update and restart menu item > selectedTheme 1`] = `"System"`;

exports[`Settings > Update and restart menu item > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Settings > Update and restart menu item > updateState 1`] = `
{
  "isAvailable": true,
  "isDownloading": true,
  "strategy": "manual",
}
`;
